[project]
name = "number_in_words"
version = "0.0.1"
description = "Convert numbers into English words easily"
authors = [
  { name="Saumya Kanti Sarma", email="work.saumyasarma@gmail.com" }
]
readme = { file = "readme.md", content-type = "text/markdown" }
license = {file = "LICENSE"}
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/Saumya-Kanti-Sarma/number-in-words"

[tool.setuptools.packages.find]
where = ["."]
